# strata

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  response_metric.md  strata_architecture.md  strata_flow.md
examples/: demo_intelligence.py  demo_pipeline.py
scripts/: setup_database.py
sql/: 00_setup.sql  01_core.sql  02_ai.sql  03_analysis.sql  04_system.sql  README.md
strata/: __init__.py  config.py
strata/ai/: __init__.py  agreement.py  model_analysis.py  state.py
strata/analysis/: __init__.py  basins.py  position.py  residuals.py  vol_spine.py
strata/db/: __init__.py  connection.py  queries.py
strata/dynamics/: __init__.py  basin_dynamics.py
strata/events/: __init__.py  detection.py
strata/ingestion/: __init__.py  market_data.py
strata/orchestration/: __init__.py
strata/regimes/: __init__.py  basin_regime.py  regime_stack.py
strata/state/: __init__.py  basin_frame.py  basin_geometry.py  basin_state.py  regime_api.py  regime_buffer.py  regime_committer.py  regime_tracker.py  run_live.py  state_api.py  state_buffer.py  state_committer.py  state_frame.py  strata_buffer.py  strata_state.py
tests/: __init__.py  test_ai_pipeline.py  test_basin_dynamics.py  test_basin_regime.py  test_basin_state.py  test_pipeline.py  test_regime_stack.py  test_regime_tracker.py  test_residual_fitter.py  test_state_api_snapshots.py  test_state_buffers_basin.py  test_strata_buffer.py  test_strata_interpretation.py
