[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strata"
version = "0.1.0"
description = "State-Tracking Regime Analysis Through AI - Market regime detection via dynamical systems"
authors = [
    {name = "STRATA Team"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",

    # Database
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",

    # IBKR API
    "ib_insync>=0.9.86",

    # Configuration
    "python-dotenv>=1.0.0",

    # Utilities
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]

ai = [
    # Placeholder for AI model dependencies (Youtu-LLM, embeddings, etc.)
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

[project.scripts]
strata = "strata.orchestration.pipeline:main"

[tool.setuptools]
packages = [
  "strata",
  "strata.db",
  "strata.ingestion",
  "strata.analysis",
  "strata.ai",
  "strata.events",
  "strata.orchestration",
  "strata.state"
]


[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=strata --cov-report=term-missing"
